--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: gaap-product-pages
+- name: pay-product-page-test
   memory: 64M
   path: ./build
   buildpack: staticfile_buildpack
